EPUO-677: Perform domain check (#241)